--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ verify_ssl = true
 [dev-packages]
 flake8 = "*"
 black = "*"
+awsebcli = "*"
 
 [packages]
 django = "==2.2.5"
@@ -15,6 +16,8 @@ django-countries = "*"
 django-seed = "*"
 django-dotenv = "*"
 requests = "*"
+pipenv-to-requirements = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.8"
