--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ idna==2.10 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3
 pillow==8.0.1
 python-dateutil==2.8.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2020.4
-psycopg==2.8.4
+psycopg2==2.8.4
 requests==2.25.0
 six==1.15.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.1 ; python_version >= '3.5'
